Added cryptocurrency-details model

--- a/src/app/cryptocurrencies/cryptocurrency/cryptocurrency.component.html
+++ b/src/app/cryptocurrencies/cryptocurrency/cryptocurrency.component.html
@@ -19,28 +19,28 @@
   <span>{{ cryptocurrency.symbol }}</span><br><br>
 
   <span class="bold">Price</span><br>
-  <span>{{ cryptocurrency.price }}</span><br><br>
+  <span>{{ cryptocurrency.price | number : '1.2-2' }} {{ selectedCurrency }}</span><br><br>
 
   <span class="bold">24h Volume</span><br>
-  <span>{{ cryptocurrency.volume24 }}</span><br><br>
+  <span>{{ cryptocurrency.volume24 | number : '1.2-2'}}</span><br><br>
 
   <span class="bold">Market cap</span><br>
-  <span>{{ cryptocurrency.marketCap }}</span><br><br>
+  <span>{{ cryptocurrency.marketCap | number : '1.2-2'}}</span><br><br>
 
   <span class="bold">1h Change</span><br>
-  <span>{{ cryptocurrency.percentChange1h }}</span><br><br>
+  <span>{{ cryptocurrency.percentChange1h | number : '1.2-2'}}</span><br><br>
 
   <span class="bold">24h Change</span><br>
-  <span>{{ cryptocurrency.percentChange24h }}</span><br><br>
+  <span>{{ cryptocurrency.percentChange24h | number : '1.2-2'}}</span><br><br>
 
   <span class="bold">7d Change</span><br>
-  <span>{{ cryptocurrency.percentChange7d }}</span><br><br>
+  <span>{{ cryptocurrency.percentChange7d | number : '1.2-2'}}</span><br><br>
 
   <span class="bold">Available Supply</span><br>
-  <span>{{ cryptocurrency.max_supply }}</span><br><br>
+  <span>{{ cryptocurrency.maxSupply }}</span><br><br>
 
   <span class="bold">Total Supply</span><br>
-  <span>{{ cryptocurrency.total_supply }}</span><br><br>
+  <span>{{ cryptocurrency.totalSupply }}</span><br><br>
 
 </div>
 
