--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -7,7 +7,7 @@
 <div class="col-sm-4">
   <div class="form-group">
     <label for="stationId">Currency</label>
-    <select class="form-control" [(ngModel)]="selectedCurrency">
+    <select class="form-control" [value]="(settingsState | async).selectedCurrency" (change)="onCurrencyChanged($event.target.value)">
       <option *ngFor="let currency of currencies" value="{{ currency }}">{{ currency }}</option>
     </select>
   </div>
