Added tests for geting the right selectedCurrency value

--- a/src/app/cryptocurrencies/cryptocurrency/cryptocurrency.component.html
+++ b/src/app/cryptocurrencies/cryptocurrency/cryptocurrency.component.html
@@ -3,7 +3,7 @@
 </div>
 
 <div class="col-sm-12">
-  <button class="btn btn-primary float-right" (click)="getCryptocurrency()">Refresh</button>
+  <button class="btn btn-primary float-right" (click)="getCryptocurrency(id)">Refresh</button>
 </div>
 
 <p>&nbsp;</p>
